--- a/app/price.html
+++ b/app/price.html
@@ -128,48 +128,117 @@
       </div>
     </header>
 
-    <section class="user-page">
+    <section class="prices-section">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-3">
-            <div class="user-menu-title">
-              Konto verwalten
-            </div>
-            <ul class="user-menu">
-              <li><a href="#">Mein Konto</a></li>
-              <li><a href="#">Merkliste</a></li>
-              <li><a href="#">Nachrichten</a></li>
-              <li><a href="#">Profil verwalten</a></li>
-              <li><a href="#">Publikationen verwalten </a></li>
-              <li><a href="#">Paket verwalten</a></li>
-            </ul>
+          <div class="col-12 col-lg-5">
+            <h2>Jetzt durch Kundenstimmen
+              Wettbewerbsvorteil sichern</h2>
           </div>
-          <div class="col-12 col-lg-9">
-            <div class="row">
-              <div class="col-12"><h1>Konto verwalten</h1></div>
-            </div>
-            <div class="row">
-              <div class="col-12 col-md-6 col-lg-4">
-                <form method="post" class="form form-user form-contacts">
-                  <h3>Passwort ändern</h3>
-                  <label><input type="text" placeholder="Altes Passwort" name="name"></label>
-                  <label><input type="text" placeholder="Neues Passwort" name="password"></label>
-                  <label><input type="text" placeholder="Neues Passwort Wiederholen" name="double_password"></label>
-                  <button type="submit" class="btn btn-accent">Speichern</button>
-                </form>
-              </div>
-              <div class="col-12 col-md-6 col-lg-4 offset-lg-1">
-                <form method="post" class="form form-user form-contacts">
-                  <h3>Newsletter abonnieren:</h3>
-                  <label><input type="text" placeholder="E-Mail Adresse" name="mail"></label>
-                  <button type="submit" class="btn btn-accent">Speichern</button>
-                </form>
 
-                <div class="delete-user">
-                  <h3>Konto löschen:</h3>
-                  <a href="#" class="btn btn-red">Löschen</a>
-                </div>
-              </div>
+          <div class="col-12">
+            <div class="table-wrapper">
+              <table class="table">
+                <thead>
+                <tr>
+                  <td></td>
+                  <td>
+                    <div class="name-tariffs">Kompakt</div>
+                    <div class="price-tariffs">
+                      <div class="currency">$</div> 0
+                    </div>
+                    <div class="footer-tariffs">
+                      <p>lorem</p>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="name-tariffs">Basis</div>
+                    <div class="price-tariffs">
+                      <div class="currency">$</div> 59
+                    </div>
+                    <div class="footer-tariffs">
+                      <a href="#" class="btn btn-accent">Auswählen</a>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="name-tariffs">Profi</div>
+                    <div class="price-tariffs">
+                      <div class="currency">$</div> 129
+                    </div>
+                    <div class="footer-tariffs">
+                      <a href="#" class="btn btn-accent">Auswählen</a>
+                    </div>
+                  </td>
+                </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <td>max. Publikatioen</td>
+                    <td>10</td>
+                    <td>25</td>
+                    <td>60</td>
+                  </tr>
+                  <tr>
+                    <td>Gallerie</td>
+                    <td>20 Bilder</td>
+                    <td>20 Bilder + 1 Video</td>
+                    <td>20 Bilder + 6 Videos</td>
+                  </tr>
+                  <tr>
+                    <td>Profil Veröffentlichung</td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>Publikationen Veröffentlichung</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>Bewertungen sammeln</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>Modernes Betriebsprofil</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>Sterne in <br>Google-Suchergebnissen</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>Detailierte <br>Unternehmensbeschreibung</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>Google-optimiertes Profil</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>Kommentierung erhaltener Bewertungen</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
@@ -245,6 +314,5 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/common.js"></script>
-
 </body>
 </html>
