--- a/app/publication.html
+++ b/app/publication.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css"
         integrity="sha512-H9jrZiiopUdsLpg94A333EfumgUBpO9MdbxStdeITo+KEIMaNfHNvwyjjDJb+ERPaRS6DpyRlKbvPUasNItRyw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -40,14 +41,14 @@
         <svg class="svg-icon">
           <use xlink:href="img/sprite.svg#burger"></use>
         </svg>
-        <span class="btn-catalog__text">Katalog |</span>
+        <span class="btn-catalog__text">Katalog</span>
       </a>
     </li>
-    <li><a href="#">Handwerker & | <br>
+    <li><a href="#">Handwerker &<br>
       Meister</a></li>
-    <li><a href="#">Kunstler & | <br>
+    <li><a href="#">Kunstler &<br>
       Sammlerstücke</a></li>
-    <li><a href="#">Dienstleister & | <br>
+    <li><a href="#">Dienstleister &<br>
       Freiberufler</a></li>
     <li><a href="#">Meisterklasse & <br>
       Kreativbedarf</a></li>
@@ -109,14 +110,14 @@
                     <svg class="svg-icon">
                       <use xlink:href="img/sprite.svg#burger"></use>
                     </svg>
-                    <span class="btn-catalog__text">Katalog |</span>
+                    <span class="btn-catalog__text">Katalog</span>
                   </a>
                 </li>
-                <li><a href="#">Handwerker & | <br>
+                <li><a href="#">Handwerker &<br>
                   Meister</a></li>
-                <li><a href="#">Kunstler & | <br>
+                <li><a href="#">Kunstler &<br>
                   Sammlerstücke</a></li>
-                <li><a href="#">Dienstleister & | <br>
+                <li><a href="#">Dienstleister &<br>
                   Freiberufler</a></li>
                 <li><a href="#">Meisterklasse & <br>
                   Kreativbedarf</a></li>
@@ -281,95 +282,123 @@
         </div>
 
         <div class="row">
-          <div class="col-12 col-sm-6 col-lg-3">
-            <div class="publication-box">
-              <a href="img/public1.jpeg" data-fancybox="image" class="publication-box__max"><img src="img/public1.jpeg"
-                                                                                                 alt=""></a>
-              <div class="row">
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public2.jpeg"><img src="img/public2.jpeg" alt="">
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public3.jpeg"><img src="img/public3.jpeg" alt="">
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public4.jpeg"><img src="img/public4.jpeg" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-3">
-            <div class="publication-box">
-              <a href="img/public5.jpeg" data-fancybox="image2" class="publication-box__max"><img src="img/public5.jpeg"
-                                                                                                  alt=""></a>
-              <div class="row">
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public6.jpeg"><img src="img/public6.jpeg" alt="">
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public7.jpeg"><img src="img/public7.jpeg" alt="">
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public8.jpeg"><img src="img/public8.jpeg" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-3">
-            <div class="publication-box">
-              <a href="img/public9.jpeg" data-fancybox="image3" class="publication-box__max"><img src="img/public9.jpeg"
-                                                                                                  alt=""></a>
-              <div class="row">
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public10.jpeg"><img src="img/public10.jpeg"
-                                                                                           alt="">
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public11.jpeg"><img src="img/public11.jpeg"
-                                                                                           alt="">
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="publication-box__min">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-3">
-            <div class="publication-box">
-              <a href="img/public13.jpeg" data-fancybox="image4" class="publication-box__max"><img
-                  src="img/public12.jpeg"
-                  alt=""></a>
-              <div class="row">
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public13.jpeg"><img src="img/public13.jpeg"
-                                                                                           alt="">
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public15.jpeg"><img src="img/public15.jpeg"
-                                                                                           alt="">
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="publication-box__min" data-img-path="img/public14.jpeg"><img src="img/public14.jpeg"
-                                                                                           alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-12">
-            <a href="#" class="btn btn-accent btn-publication">Weitere Publikationen</a>
+            <div class="publication-slider w-100">
+              <div class="slide">
+                <div class="publication-box">
+                  <a href="img/public1.jpeg" data-fancybox="image" class="publication-box__max"><img
+                      src="img/public1.jpeg"
+                      alt=""></a>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public2.jpeg"><img src="img/public2.jpeg"
+                                                                                              alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public3.jpeg"><img src="img/public3.jpeg"
+                                                                                              alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public4.jpeg"><img src="img/public4.jpeg"
+                                                                                              alt="">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="slide">
+                <div class="publication-box">
+                  <a href="img/public5.jpeg" data-fancybox="image2" class="publication-box__max"><img src="img/public5.jpeg"
+                                                                                                      alt=""></a>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public6.jpeg"><img src="img/public6.jpeg" alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public7.jpeg"><img src="img/public7.jpeg" alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public8.jpeg"><img src="img/public8.jpeg" alt="">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="slide">
+                <div class="publication-box">
+                  <a href="img/public9.jpeg" data-fancybox="image3" class="publication-box__max"><img src="img/public9.jpeg"
+                                                                                                      alt=""></a>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public10.jpeg"><img src="img/public10.jpeg"
+                                                                                               alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public11.jpeg"><img src="img/public11.jpeg"
+                                                                                               alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="slide">
+                <div class="publication-box">
+                  <a href="img/public13.jpeg" data-fancybox="image4" class="publication-box__max"><img
+                      src="img/public12.jpeg"
+                      alt=""></a>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public13.jpeg"><img src="img/public13.jpeg"
+                                                                                               alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public15.jpeg"><img src="img/public15.jpeg"
+                                                                                               alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public14.jpeg"><img src="img/public14.jpeg"
+                                                                                               alt="">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="slide">
+                <div class="publication-box">
+                  <a href="img/public1.jpeg" data-fancybox="image" class="publication-box__max"><img
+                      src="img/public1.jpeg"
+                      alt=""></a>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public2.jpeg"><img src="img/public2.jpeg"
+                                                                                              alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public3.jpeg"><img src="img/public3.jpeg"
+                                                                                              alt="">
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="publication-box__min" data-img-path="img/public4.jpeg"><img src="img/public4.jpeg"
+                                                                                              alt="">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -641,6 +670,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
         integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/common.js"></script>
 
 </body>
