--- a/app/favorites.html
+++ b/app/favorites.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css"
         integrity="sha512-H9jrZiiopUdsLpg94A333EfumgUBpO9MdbxStdeITo+KEIMaNfHNvwyjjDJb+ERPaRS6DpyRlKbvPUasNItRyw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -40,14 +41,14 @@
         <svg class="svg-icon">
           <use xlink:href="img/sprite.svg#burger"></use>
         </svg>
-        <span class="btn-catalog__text">Katalog |</span>
+        <span class="btn-catalog__text">Katalog</span>
       </a>
     </li>
-    <li><a href="#">Handwerker & | <br>
+    <li><a href="#">Handwerker &<br>
       Meister</a></li>
-    <li><a href="#">Kunstler & | <br>
+    <li><a href="#">Kunstler &<br>
       Sammlerstücke</a></li>
-    <li><a href="#">Dienstleister & | <br>
+    <li><a href="#">Dienstleister &<br>
       Freiberufler</a></li>
     <li><a href="#">Meisterklasse & <br>
       Kreativbedarf</a></li>
@@ -109,14 +110,14 @@
                     <svg class="svg-icon">
                       <use xlink:href="img/sprite.svg#burger"></use>
                     </svg>
-                    <span class="btn-catalog__text">Katalog |</span>
+                    <span class="btn-catalog__text">Katalog</span>
                   </a>
                 </li>
-                <li><a href="#">Handwerker & | <br>
+                <li><a href="#">Handwerker &<br>
                   Meister</a></li>
-                <li><a href="#">Kunstler & | <br>
+                <li><a href="#">Kunstler &<br>
                   Sammlerstücke</a></li>
-                <li><a href="#">Dienstleister & | <br>
+                <li><a href="#">Dienstleister &<br>
                   Freiberufler</a></li>
                 <li><a href="#">Meisterklasse & <br>
                   Kreativbedarf</a></li>
@@ -288,6 +289,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
         integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/common.js"></script>
 
 </body>
