--- a/app/user.html
+++ b/app/user.html
@@ -9,13 +9,23 @@
 
   <meta property="og:image" content="path/to/image.jpg">
   <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-
-  <!-- Chrome, Firefox OS and Opera -->
-  <meta name="theme-color" content="#000">
-  <!-- Windows Phone -->
-  <meta name="msapplication-navbutton-color" content="#000">
-  <!-- iOS Safari -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="#000">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,7 +96,7 @@
               </form>
 
               <div class="header-box">
-                <a href="#" class="header-box__links">Login</a>
+                <a href="user.html" class="header-box__links">Login</a>
                 <a href="#" class="header-box__links">Registrieren</a>
               </div>
 
@@ -136,12 +146,12 @@
               Mein Konto
             </div>
             <ul class="user-menu">
-              <li><a href="#">Konto verwalten</a></li>
-              <li><a href="#">Merkliste</a></li>
+              <li><a href="manage-account.html">Konto verwalten</a></li>
+              <li><a href="favorites.html">Merkliste</a></li>
               <li><a href="#">Nachrichten</a></li>
-              <li><a href="#">Profil verwalten</a></li>
-              <li><a href="#">Publikationen verwalten </a></li>
-              <li><a href="#">Paket verwalten</a></li>
+              <li><a href="profile.html">Profil verwalten</a></li>
+              <li><a href="publication.html">Publikationen verwalten </a></li>
+              <li><a href="price.html">Paket verwalten</a></li>
             </ul>
           </div>
           <div class="col-12 col-lg-9">
