--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,24 @@
 
   <meta property="og:image" content="path/to/image.jpg">
   <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
-  <!-- Chrome, Firefox OS and Opera -->
-  <meta name="theme-color" content="#000">
-  <!-- Windows Phone -->
-  <meta name="msapplication-navbutton-color" content="#000">
-  <!-- iOS Safari -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,7 +96,7 @@
               </form>
 
               <div class="header-box">
-                <a href="#" class="header-box__links">Login</a>
+                <a href="user.html" class="header-box__links">Login</a>
                 <a href="#" class="header-box__links">Registrieren</a>
               </div>
 
@@ -159,7 +170,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="#" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
@@ -188,7 +199,7 @@
                         </svg>
                       </li>
                     </ul>
-                    <a href="#" class="product-card__title">Lorem ipsum dolor</a>
+                    <a href="publication.html" class="product-card__title">Lorem ipsum dolor</a>
                     <div class="price-wrapper">
                       <div class="new-price">€ 99,95</div>
                       <div class="old-price">€ 108,95</div>
@@ -203,7 +214,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="#" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li class="star0">
@@ -232,7 +243,7 @@
                         </svg>
                       </li>
                     </ul>
-                    <a href="#" class="product-card__title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</a>
+                    <a href="publication.html" class="product-card__title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</a>
                     <div class="price-wrapper">
                       <div class="price-default">€ 103,95</div>
                     </div>
@@ -246,7 +257,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="#" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li class="star0">
@@ -275,7 +286,7 @@
                         </svg>
                       </li>
                     </ul>
-                    <a href="#" class="product-card__title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</a>
+                    <a href="publication.html" class="product-card__title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</a>
                     <div class="price-wrapper">
                       <div class="new-price">€ 103,95</div>
                       <div class="old-price">€ 143,95</div>
@@ -290,7 +301,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="#" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
@@ -319,7 +330,7 @@
                         </svg>
                       </li>
                     </ul>
-                    <a href="#" class="product-card__title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</a>
+                    <a href="publication.html" class="product-card__title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</a>
                     <div class="price-wrapper">
                       <div class="new-price">€ 99,95</div>
                       <div class="old-price">€ 108,95</div>
@@ -334,7 +345,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="#" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
@@ -363,7 +374,7 @@
                         </svg>
                       </li>
                     </ul>
-                    <a href="#" class="product-card__title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</a>
+                    <a href="publication.html" class="product-card__title">Lorem ipsum dolor sit amet, consetetur sadipscing elitr</a>
                     <div class="price-wrapper">
                       <div class="new-price">€ 99,95</div>
                       <div class="old-price">€ 108,95</div>
